--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,7 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "ibus")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 set(CPACK_RPM_PACKAGE_LICENSE "GPLv3")
-set(CPACK_RPM_PACKAGE_URL "https://github.com/OpenBangla/OpenBangla-Keyboard")
+set(CPACK_RPM_PACKAGE_URL "http://openbangla.github.io/")
 set(CPACK_RPM_PACKAGE_REQUIRES "qt5-qtbase >= 5.9.0, ibus >= 1.5.1, ibus-libs >= 1.5.1")
 set(CPACK_RPM_PACKAGE_RELEASE_DIST ON)
 set(CPACK_STRIP_FILES TRUE)
