--- a/data/openbangla.xml.in
+++ b/data/openbangla.xml.in
@@ -4,7 +4,7 @@
 <component>
     <name>org.freedesktop.IBus.OpenBangla</name>
     <description>OpenBangla Keyboard</description>
-    <exec>@LIBEXEC_DIR@/OpenBangla-Engine --ibus</exec>
+    <exec>@PROJECT_DATADIR@/OpenBangla-Engine --ibus</exec>
     <version>@PROJECT_VERSION@</version>
     <author>See About Dialog</author>
     <license>GPL 3</license>
