--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ compiler:
 before_install:
   - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
   - sudo apt-get update -qq
-  - sudo apt-get install libibus-1.0-dev qt55base qt55declarative
+  - sudo apt-get install libibus-1.0-dev qt55base
   - source /opt/qt55/bin/qt55-env.sh
 before_script:
   - mkdir build
