--- a/cmake/cmake_uninstall.cmake.in
+++ b/cmake/cmake_uninstall.cmake.in
@@ -1,53 +1,29 @@
 #
-
-# "uninstall" target for
-reverting latest
-"make install"
+# "uninstall" target for reverting latest "make install"
 #
 
-if(
-NOT EXISTS
-"@CMAKE_BINARY_DIR@/install_manifest.txt")
-message("Cannot find install manifest: @CMAKE_BINARY_DIR@/install_manifest.txt")
+if(NOT EXISTS "@CMAKE_BINARY_DIR@/install_manifest.txt")
+  message("Cannot find install manifest: @CMAKE_BINARY_DIR@/install_manifest.txt")
 else()
-file(READ
-"@CMAKE_BINARY_DIR@/install_manifest.txt" files)
-string(REGEX
-REPLACE "\n" ";" files "${files}")
-foreach(file
-${
-files})
-message(STATUS
-"Uninstalling $ENV{DESTDIR}${file}")
-if(IS_SYMLINK "$ENV{DESTDIR}${file}"
-OR EXISTS
-"$ENV{DESTDIR}${file}")
-exec_program(
-"@CMAKE_COMMAND@" ARGS "-E remove \"$ENV{DESTDIR}${file}\""
-OUTPUT_VARIABLE rm_out
-RETURN_VALUE rm_retval
-)
-if(NOT "${rm_retval}" STREQUAL 0)
-message(FATAL_ERROR
-"Problem when removing $ENV{DESTDIR}${file}")
-endif(NOT
-"${rm_retval}" STREQUAL 0)
-else(IS_SYMLINK "$ENV{DESTDIR}${file}"
-OR EXISTS
-"$ENV{DESTDIR}${file}")
-message(STATUS
-"File $ENV{DESTDIR}${file} does not exist.")
-endif(IS_SYMLINK
-"$ENV{DESTDIR}${file}"
-OR EXISTS
-"$ENV{DESTDIR}${file}")
-endforeach(file)
+  file(READ "@CMAKE_BINARY_DIR@/install_manifest.txt" files)
+  string(REGEX REPLACE "\n" ";" files "${files}")
+  foreach(file ${files})
+    message(STATUS "Uninstalling $ENV{DESTDIR}${file}")
+    if(IS_SYMLINK "$ENV{DESTDIR}${file}" OR EXISTS "$ENV{DESTDIR}${file}")
+      exec_program(
+        "@CMAKE_COMMAND@" ARGS "-E remove \"$ENV{DESTDIR}${file}\""
+        OUTPUT_VARIABLE rm_out
+        RETURN_VALUE rm_retval
+        )
+      if(NOT "${rm_retval}" STREQUAL 0)
+        message(FATAL_ERROR "Problem when removing $ENV{DESTDIR}${file}")
+      endif(NOT "${rm_retval}" STREQUAL 0)
+    else(IS_SYMLINK "$ENV{DESTDIR}${file}" OR EXISTS "$ENV{DESTDIR}${file}")
+      message(STATUS "File $ENV{DESTDIR}${file} does not exist.")
+    endif(IS_SYMLINK "$ENV{DESTDIR}${file}" OR EXISTS "$ENV{DESTDIR}${file}")
+  endforeach(file)
 
-execute_process(
-    COMMAND
-"${CMAKE_COMMAND}" -
-E remove
-"@CMAKE_BINARY_DIR@/install_manifest.txt"
-)
-endif(NOT
-EXISTS "@CMAKE_BINARY_DIR@/install_manifest.txt")
+  execute_process(
+    COMMAND "${CMAKE_COMMAND}" -E remove "@CMAKE_BINARY_DIR@/install_manifest.txt"
+  )
+endif(NOT EXISTS "@CMAKE_BINARY_DIR@/install_manifest.txt")
