--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -4,5 +4,10 @@ if (OS_LINUX)
     add_subdirectory(ibus)
 endif (OS_LINUX)
 
+if(WIN32)
+    ## Platform is Windows
+    add_subdirectory(windows)
+endif(WIN32)
+
 ## Include subdirectories
 add_subdirectory(libengine)
