Encapsulate platform specific paths into functions. Rename SpecialFolders class and headers to remove disambiguation and to maintain naming consistency.

--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -1,4 +1,7 @@
+#include_directories(.)
+
 add_library(libShared
-        Settings.cpp)
+        Settings.cpp
+        FileSystem.cpp)
 
 target_link_libraries(libShared Qt5::Core)
