--- a/data/openbangla-keyboard.desktop.in
+++ b/data/openbangla-keyboard.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=OpenBangla Keyboard
 Comment=An OpenSource, Unicode compliant Bengali Input Method.
-Exec=@PROJECT_DATADIR@/OpenBangla-Keyboard %f
+Exec=@PROJECT_DATADIR@/openbangla-gui %f
 Icon=openbangla-keyboard
 Type=Application
 Categories=Utility;Application;
