Decouple frontend from libengine

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(../shared ../engine/libengine 3rdParty)
+include_directories(../shared 3rdParty)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
@@ -18,10 +18,11 @@ set(SRC_MAIN main.cpp
         Layout.cpp
         LayoutConverter.cpp
         LayoutConverter.h
-        SingleInstance.cpp)
+        SingleInstance.cpp
+        AvroPhonetic.cpp)
 
 add_executable(openbangla-gui ${SRC_MAIN} ${SRC_GUI})
-target_link_libraries(openbangla-gui libEngine libShared 3rdParty Qt5::Widgets Qt5::Network)
+target_link_libraries(openbangla-gui libShared 3rdParty Qt5::Widgets Qt5::Network)
 
 install(TARGETS openbangla-gui
         RUNTIME DESTINATION ${PROJECT_DATADIR})
