--- a/data/Avro_Easy.json
+++ b/data/Avro_Easy.json
@@ -62,10 +62,10 @@
     "Key_B_Normal": "ব",
     "Key_B_Shift": "ভ",
     "Key_B_ShiftAltGr": "",
-    "Key_BackBracket_AltGr": "",
-    "Key_BackBracket_Normal": "ৱ",
-    "Key_BackBracket_Shift": "ৰ",
-    "Key_BackBracket_ShiftAltGr": "",
+    "Key_BackSlash_AltGr": "",
+    "Key_BackSlash_Normal": "ৱ",
+    "Key_BackSlash_Shift": "ৰ",
+    "Key_BackSlash_ShiftAltGr": "",
     "Key_BackQuote_AltGr": "",
     "Key_BackQuote_Normal": "‌",
     "Key_BackQuote_Shift": "‍",
