Initial stage of adding riti library!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "system_error": "cpp",
     "qjsonobject": "cpp",
     "qtsql": "cpp",
-    "qstring": "cpp"
+    "qstring": "cpp",
+    "libriti.h": "c"
   }
 }
