--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,13 @@ language: cpp
 os:
   - linux
 sudo: required
-dist: trusty
+dist: xenial
 compiler:
   - g++
   - clang
 before_install:
-  - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
   - sudo apt-get update -qq
-  - sudo apt-get install libibus-1.0-dev qt55base
-  - source /opt/qt55/bin/qt55-env.sh
+  - sudo apt-get install libibus-1.0-dev qt5-default rustc cargo
 before_script:
   - mkdir build
   - cd build
