Alhamdulillah! Started writing a new ibus engine with Riti!

--- a/src/engine/ibus-new/CMakeLists.txt
+++ b/src/engine/ibus-new/CMakeLists.txt
@@ -1,3 +1,3 @@
-include_directories(../riti/include ../../shared)
+include_directories(../riti/include ../../shared ${IBUS_INCLUDE_DIRS})
 add_executable(ibus-openbangla main.cpp)
-target_link_libraries(ibus-openbangla riti libShared Qt5::Core dl pthread)
+target_link_libraries(ibus-openbangla riti libShared Qt5::Core ${IBUS_LIBRARIES} dl pthread)
