--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.0.2)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
+# ties to RELEASE_VERSION grepper in tools/{build,publish}.sh
 project(OpenBangla-Keyboard VERSION 1.5.1)
 set(APP_NAME "OpenBangla-Keyboard")
 
