--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 name: CI
 on: 
   push:
+    branches: [ '**' ]
+    tags-ignore: [ '**' ]
     paths-ignore: [ '**.md', '**.adoc' ]
   pull_request:
     paths-ignore: [ '**.md', '**.adoc' ]
