add branch filter to PR ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     tags-ignore: [ '**' ]
     paths-ignore: [ '**.md', '**.adoc' ]
   pull_request:
+    branches: [ '**' ]
     paths-ignore: [ '**.md', '**.adoc' ]
 
 jobs:
