--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,10 @@ jobs:
     strategy:
       matrix:
         container: [ "ubuntu:18.04", "ubuntu:19.10", "ubuntu:20.04", "debian:9", "debian:10", "fedora:29", "fedora:30", "fedora:31", "fedora:32", "archlinux:latest" ]
+        # this list should be updated from time to time by consulting these pages:
+        # https://releases.ubuntu.com/
+        # https://wiki.debian.org/DebianReleases#Production_Releases
+        # https://fedoraproject.org/wiki/Releases
     runs-on: "ubuntu-latest"
     container:
       image: ${{ matrix.container }}
