--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,9 +54,11 @@ if (OS_LINUX)
     add_definitions(-DPROJECT_DATADIR="${PROJECT_DATADIR}")
 
     include(FindPkgConfig)
-    ## Find iBus ##
     find_package(PkgConfig)
+    ## Find iBus ##
     pkg_check_modules(IBUS REQUIRED ibus-1.0)
+    ## Find zstd ##
+    pkg_check_modules(ZSTD REQUIRED libzstd)
 endif (OS_LINUX)
 
 add_subdirectory(src/engine)
@@ -91,7 +93,7 @@ set(CPACK_DEBIAN_PACKAGE_DEPENDS "ibus (>= 1.5.1)")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 set(CPACK_RPM_PACKAGE_LICENSE "GPLv3")
 set(CPACK_RPM_PACKAGE_URL "https://openbangla.github.io/")
-set(CPACK_RPM_PACKAGE_REQUIRES "qt5-qtbase >= 5.9.0, ibus >= 1.5.1, ibus-libs >= 1.5.1")
+set(CPACK_RPM_PACKAGE_REQUIRES "qt5-qtbase >= 5.9.0, ibus >= 1.5.1, ibus-libs >= 1.5.1, libzstd >= 1.3.3")
 set(CPACK_RPM_PACKAGE_RELEASE_DIST ON)
 # Prevents CPack from generating file conflicts
 set(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/usr/share/applications")
