Add stdexcept header file An intended for #150

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "qjsonobject": "cpp",
     "qtsql": "cpp",
     "qstring": "cpp",
-    "libriti.h": "c"
+    "libriti.h": "c",
+    "stdexcept": "cpp"
   }
 }
