--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -1,7 +1,14 @@
 ## Platform depended things
 if (OS_LINUX)
+    add_subdirectory(common)
     ## Platform is Linux
-    add_subdirectory(ibus)
+    if (ENABLE_IBUS)
+        add_subdirectory(ibus)
+    endif()
+
+    if (ENABLE_FCITX)
+        add_subdirectory(fcitx)
+    endif()
 endif (OS_LINUX)
 
 ## Include subdirectories
