LIBEXECDIR should be set and used
The architecture dependent executables ibus-openbangla and
openbangla-gui are currently installed in the /usr/share hierarchy,
which is not in accordance with the Filesystem Hierarchy Standard
for UNIX-like operating systems. This commit moves those files to
the more proper /usr/libexec directory and renames ibus-openbangla
to ibus-engine-openbangla.

The commit is a continuation of cea66e8b.

Resulting file paths:

/usr/libexec/ibus-engine-openbangla
/usr/libexec/openbangla-keyboard/openbangla-gui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,10 @@ if (OS_LINUX)
     set(CMAKE_INSTALL_PREFIX "/usr")
     set(BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin")
     set(DATADIR "${CMAKE_INSTALL_PREFIX}/share")
+    set(LIBEXECDIR "${CMAKE_INSTALL_PREFIX}/libexec")
     set(PROJECT_DATADIR "${DATADIR}/openbangla-keyboard")
     add_definitions(-DPROJECT_DATADIR="${PROJECT_DATADIR}")
+    add_definitions(-DLIBEXECDIR="${LIBEXECDIR}")
 
     include(FindPkgConfig)
     find_package(PkgConfig)
