--- a/data/openbangla-keyboard.desktop.in
+++ b/data/openbangla-keyboard.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=OpenBangla Keyboard
 Comment=An OpenSource, Unicode compliant Bengali Input Method.
-Exec=@BIN_DIR@/openbangla-gui %f
+Exec=@LIBEXECDIR@/openbangla-keyboard/openbangla-gui %f
 Icon=openbangla-keyboard
 Type=Application
 Categories=Utility;Application;
