--- a/src/engine/fcitx/openbangla-addon.conf
+++ b/src/engine/fcitx/openbangla-addon.conf
@@ -1,5 +1,5 @@
 [Addon]
-Name=OpenBangla Input Method For Fcitx
+Name=OpenBangla Keyboard Input Method For Fcitx
 Category=InputMethod
 Library=openbangla
 Type=SharedLibrary
