Change fcitx label

--- a/src/engine/fcitx/openbangla.conf
+++ b/src/engine/fcitx/openbangla.conf
@@ -1,7 +1,7 @@
 [InputMethod]
 Name=OpenBangla Keyboard
 Icon=openbangla-keyboard
-Label=ও
+Label=বাং
 LangCode=bn
 Addon=openbangla
 Configurable=True
