--- a/src/engine/windows/Cargo.toml
+++ b/src/engine/windows/Cargo.toml
@@ -11,7 +11,11 @@ crate-type = ["cdylib"]
 [dependencies.windows]
 version = "0.34.0"
 features = [
+    "alloc",
     "Win32_Foundation",
     "Win32_System_Com",
     "Win32_System_SystemServices",
+    "Win32_System_LibraryLoader",
+    "Win32_System_Registry",
+    "Win32_Security",
 ]
