Initial IClassFactory implementation

--- a/src/engine/windows/Cargo.toml
+++ b/src/engine/windows/Cargo.toml
@@ -16,6 +16,7 @@ winreg = "0.10"
 version = "0.37"
 features = [
     "alloc",
+    "implement",
     "Win32_Foundation",
     "Win32_System_Com",
     "Win32_System_SystemServices",
